@@ -7,6 +7,7 @@ Version Next
     - Allow SpringXSLUpdateTransformConfigurer to configure the TransformerFactory
     - Added IdGenerator.checkId() allowing to read but not assign an object's ID
     - Disallow forward references in ParseUtil.serializeReference (as documented)
+    - Added VaadinApplicationListener.removeAsListenerFrom()
 
 Version 1.0.432 Released June 29, 2012
 
